# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

17-May-2010 Jean-Marie Simonet
$ Fixed some beez language strings + a CSS in bluestork
$ Fixed some com_users language issues
$ Adding missing strings in com_users (WIP)

17-May-2010 Ron Severdia
# Fix CSS & language strings for Weblinks UI
+ Added missing icon
$ Language fixes

17-May-2010 Christophe Demko
 # Ensure there exists a default published menu item when changing home
 # Ensure there exists a default menu item while deleting menu items
 # Ensure there exists a default menu item while deleting menus
 # Fix display modules linked to a menu (menus view)
 # Fix sample_data.sql
 # Rename bad named images
 # Fix [#20300] Article archive
 ^ Ordering of toolbar icons for some views

17-May-2010 Mark Dexter
# Fix language strings in New Menu Item

17-May-2010 Andrew Eddie
 ^ Fixed issue [#20431] Module cache not activated in defult installation and sample data module parameters (Klas Berlič)
 # Fixed issue [#20445] The pagebreak plugin produces a fatal error.
 # Fixed issue [#20452] Turn off module debugging by default (Elin Waring).
 # Fixed issue [#20430] Multiple cache and performance related optimizations and bugfixes - results in 30% decrease on load times (Klas Berlič).
 # Fixed issue [#20318] Change confusing language in installer (Elin Waring).
 # Fixed issue [#20386] [patch] update Hathor overrides with changes made to com_menu default_batch.php (Andrea Tarr).
 # Fixed issue [#20163] Media Manager Max Upload Size displaying incorrectly (Anthony McLin, Elin Waring).
 # Fixed issue [#20435] single newsfeed error.
 # Fixed issue [#20287] Rendering config.xml files generates php warning [patch included] (Jonatas Braganca).
 # Fixed issue [#20410] Module Manager for Admin modules includes Site only options (Elin Waring).
 # Fixed issue [#20292] Cannot change a menu type that is set to alias.
 # Fixed issue [#20172] Various errors during module saving in backend.